syntax = "proto3";
package models.events;
option go_package = "github.com/bptlab/cepta/models/events/train";
option java_package = "org.bptlab.cepta.models.events.train";

import "models/types/transports.proto";

message TrainDelayNotification {
    models.types.transports.TransportID transport_id = 1;
    int64 location_id = 2;
    double delay = 3;
}